--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="text_user_name_empty">Username tidak boleh kosong</string>
     <string name="text_password_empty">Password tidak boleh kosong</string>
     <string name="txt_name_empty">Nama tidak boleh kosong</string>
+    <string name="text_read_file">This app needs access to your file storage so that it can read photos.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
